force-app/main/default/objects/HFS_Approval__c/HFS_Approval__c.object-meta.xml
<CustomObject>
    <description>Human approval or rejection of a recommendation under a named policy.</description>
    <label>Approval</label>
    <nameField>
        <displayFormat>APP-{000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>