force-app/main/default/objects/HFS_Approval__c/fields/Decided_At__c.field-meta.xml
<CustomField>
    <fullName>Decided_At__c</fullName>
    <label>Decided At</label>
    <type>DateTime</type>
</CustomField>