force-app/main/default/objects/HFS_Approval__c/fields/Decision_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approvals by Decision By</relationshipLabel>
    <relationshipName>HFS_Approval_Decision_By</relationshipName>
    <type>Lookup</type>
</CustomField>