force-app/main/default/objects/HFS_Approval__c/fields/Policy_Key__c.field-meta.xml
<CustomField>
    <fullName>Policy_Key__c</fullName>
    <label>Policy Key</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
</CustomField>