force-app/main/default/objects/HFS_Approval__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recommendation</label>
    <referenceTo>HFS_Recommendation__c</referenceTo>
    <relationshipLabel>Approvals by Recommendation</relationshipLabel>
    <relationshipName>HFS_Approval_Recommendation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>