force-app/main/default/objects/HFS_Approval__c/validationRules/Decision_Fields_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Decision_Fields_Required</fullName>
    <active>true</active>
    <description>Decision By and Decided At are required for a completed approval decision.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status__c, "APPROVED"), ISPICKVAL(Status__c, "REJECTED"), ISPICKVAL(Status__c, "REVOKED")), OR(ISBLANK(Decision_By__c), ISBLANK(Decided_At__c)))</errorConditionFormula>
    <errorMessage>Decision By and Decided At are required for a completed approval decision.</errorMessage>
</ValidationRule>